<resources>
<!--    <string name="app_name">EAD_Assignment</string>-->
<!--    <string name="navigation_drawer_open">Open navigation drawer</string>-->
<!--    <string name="navigation_drawer_close">Close navigation drawer</string>-->
<!--    <string name="nav_header_title">Android Studio</string>-->
<!--    <string name="nav_header_subtitle">android.studio@android.com</string>-->
<!--    <string name="nav_header_desc">Navigation header</string>-->
<!--    <string name="action_settings">Settings</string>-->

<!--    <string name="menu_home">Home</string>-->
<!--    <string name="menu_gallery">Gallery</string>-->
<!--    <string name="menu_slideshow">Slideshow</string>-->
    <string name="app_name">My Travels</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">My Travels</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="book_seat">Book Your Seat</string>
    <string name="view_bookings">Bookings</string>
    <string name="cancel">Cancel</string>
    <string name="view_profile">Profile</string>
    <string name="view_history">Bookings History</string>
    <string name="logout">Logout</string>
</resources>